--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: Mariano Aponte Online CV
-description: Mariano Aponte Online CV
-show_downloads: true
+title: Mariano Aponte
+description: MSc student of Cybersecurity
+show_downloads: false
